Secciones y fix de dimensiones .row img y iframe mapa

--- a/style.css
+++ b/style.css
@@ -175,6 +175,10 @@ p {
     justify-content: space-between;
 }
 
+.row img {
+    max-width: 100%;
+}
+
 .titulo2-col {
     flex-basis: 31%;
     background: #fff3f3;
