--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 * {
     margin: 0;
-    padding: 0;
+    /*padding: 0;     Lo comenté para que no me bloquee una propiedad de las listas, esto me estaba afectando el orden*/
     font-family: 'Bebas Neue', sans-serif;
     font-family: 'Montserrat', sans-serif;
 
@@ -308,6 +308,7 @@ strong{
 .Tabla_Opening, tr, th, td{
     border-style:solid;
     border-color:gray;
+    border-collapse: collapse;
 }
 
 .Canciones_Ending{
@@ -318,9 +319,9 @@ strong{
     padding-left: 30px;
     padding-right: 30px;
     padding-top: 15px;
-    padding-bottom: 15px;
+    padding-bottom: 150px;
     border: 2px solid orange;
-    width: 250px;
+    width: 380px;
     list-style: none;
     color: #fff;
 }
