--- a/seccion5.css
+++ b/seccion5.css
@@ -7,23 +7,24 @@
 }
 
 .header {
-    min-height: 100vh;
+    min-height: 102vh;
     width: 100%;
-    background-image: linear-gradient(rgba(59, 59, 59, 0.048), rgba(0, 1, 7, 0.7)), url(images/banner.jpg);
+    background-image: url(images/fondoformulario.jpg);
+    background-repeat: no-repeat;
     background-position: center;
-    background-size: cover;
+    background-size: 2000px;
     position: relative;
 }
 
 nav {
     display: flex;
-    padding: 2% 6%;
+    padding: 2% 15%;
     justify-content: space space-between;
     align-items: center;
 }
 
 nav img {
-    width: 150 px;
+    width: 200 px;
 }
 
 .nav-links {
@@ -121,7 +122,7 @@ nav .fa {
     /* sidebar */
     .nav-links {
         position: absolute;
-        background: #f44336;
+        background: #eb17170c;
         height: 100vh;
         width: 200px;
         top: 0;
@@ -192,80 +193,47 @@ p {
 h3 {
     text-align: center;
     font-weight: 600;
+    margin: 5px 0;
+
+}
+
+
+/* formulario pagina de contacto */
+form{
+background: #fcfcfca8;
+display: flex;
+flex-direction: column;
+padding: 2vw 4vw;
+width: 120%;
+max-width: 600px;
+border-radius: 20px;
+}
+
+form h3{
+color: #555;
+font-weight: 800;
+margin-bottom: 20px;
+}
+
+form input, form textarea{
+    border: 0;
     margin: 10px 0;
-
+    padding: 20px;
+    outline: none;
+   background: #dadada;
+   font-size: 16px;
 }
 
-/*sombras de recuadros articulos*/
-.titulo2-col:hover {
-    box-shadow: 0 0 20px 0px rgba(0, 0, 0, 0.2);
-}
-
-/*visualizacion de reacuadros articulos en pantalla pequeña*/
-@media (max-width: 700px) {
-    .row {
-        flex-direction: column;
-    }
-}
-
-/*ABOUT: acerca de nuestra empresa*/
-.ABOUT {
-    width: 80%;
-    margin: auto;
-    text-align: center;
-    padding-top: 50px;
-  }
-
-ABOUT-col {
-
-    flex-basis: 32%;
-    border-radius: 10px;
-    margin-bottom: 30px;
-    position: relative;
-    overflow: hidden;
-
-}
-
-ABOUT-col img {
-    width: 100%;
-
-}
-
-.location {
-width: 80%;
-margin: auto;
-text-align: center;
-padding-top: 50px;
-
-
-}
-
-
-
-/*-----footer------*/
-
-.footer{
-    width: 100%;
-    text-align: center;
-    padding: 30px 0;
-}
-
-.footer h4{
-margin-bottom: 25px;
-margin-top: 20px;
-font-weight: 600;
-
-
-}
-
-.icons .fa{
-color:#f44336;
-margin: 0 13px;
+form-button{
+padding: 15px;
+background: #ff5361;
+color: #fff;
+font-size: 18;
+border: 0;
+outline: none;
 cursor: pointer;
-padding: 18px 0;
-
+width: 150px;
+margin: 20px auto 0;
 
 }
-
-
 
