--- a/style.css
+++ b/style.css
@@ -1,15 +1,16 @@
 * {
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
   font-family: "Bebas Neue", sans-serif;
   font-family: "Montserrat", sans-serif;
 }
 
 .header {
-  min-height: 100vh;
-  width: 100%;
   background-image: linear-gradient(rgba(59, 59, 59, 0.048), rgba(0, 1, 7, 0.7)),
     url(images/banner.jpg);
+  min-height: 100vh;
+  width: 100%;
   background-position: center;
   background-size: cover;
   position: relative;
@@ -228,4 +229,119 @@ h3 {
   margin: 0 13px;
   cursor: pointer;
   padding: 18px 0;
+}
+
+/*Seccion Mangas*/
+
+@font-face {
+  font-family: dragonball;
+  src: url(/fuentes/Saiyan-Sans.ttf);
+}
+
+#mangas {
+  /*Body*/
+  background-image: url(/images/dragonball/namek.png);
+  background-size: cover;
+}
+
+/*Titulo Mangas*/
+#mangas section h2 {
+  text-align: center;
+  color: #fa0011;
+  font-size: 4rem;
+  font-family: dragonball;
+  font-weight: 400;
+  text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000,
+    1px 1px 0 #000;
+  margin: 5rem;
+}
+
+#mangas section h2 span {
+  font-family: dragonball;
+  color: #550000;
+}
+
+#mangas section h2 .o {
+  font-family: dragonball;
+  color: #f3e603;
+}
+
+/*Carrusel*/
+#mangas__carrusel {
+  width: 100%;
+}
+
+/*Imagenes*/
+.mangas__caja-lista {
+  position: relative;
+  display: flex;
+  align-items: center;
+  width: fit-content;
+  height: 447px;
+  padding: 10px 0;
+  margin: 0 auto;
+  max-width: 89vw;
+  overflow: hidden;
+}
+
+.mangas__caja-track {
+  position: relative;
+  top: 0;
+  left: 0;
+  display: flex;
+  justify-content: center;
+  transition: 0.5s ease-in-out;
+}
+
+.mangas__caja {
+  position: relative;
+  width: 300px;
+  padding: 0 18px;
+  float: left;
+  display: flex;
+  height: 100%;
+}
+
+.mangas__caja a img {
+  object-fit: cover;
+  height: 447px;
+  width: 100%;
+  border-radius: 0.8rem;
+  box-shadow: 0 2px 5px 0 #0008;
+  transition: 0.3s ease-in-out;
+}
+
+.mangas__caja a img:hover {
+  opacity: 0.85;
+}
+
+/*Botones*/
+.mangas__caja-flecha {
+  border-radius: 30px;
+  background-color: #fff;
+  position: absolute;
+  z-index: 4;
+  width: 48px;
+  height: 48px;
+  text-align: center;
+  box-shadow: 0 2px 5px 0 #0002;
+  border: 0;
+  cursor: pointer;
+}
+
+.mangas__caja-flecha:focus {
+  outline: 0;
+}
+
+.mangas__caja-flecha i {
+  width: 12px;
+  color: #000b;
+}
+
+#mangas__bonton-ant, #mangas__bonton-antz {
+  left: 0px;
+}
+
+#mangas__bonton-sig, #mangas__bonton-sigz {
+  right: 0px;
 }
