--- a/style.css
+++ b/style.css
@@ -268,7 +268,10 @@ padding: 18px 0;
     display: flex;
     flex-direction: row;
     flex-wrap: nowrap;
-    align-content: stretch;
+    position: relative;
+    width: 100%;
+    height: 100%;
+    justify-content: space-evenly;
 }
 
 .Container_Music{
