--- a/style.css
+++ b/style.css
@@ -267,6 +267,7 @@ strong {
     1px 1px 0 #000;
 }
 
+/*Probé la fuente de letra, si queda, hay que colocarla en la opening*/
 .Tabla_Opening_Ending,
 tr,
 th,
