--- a/style.css
+++ b/style.css
@@ -209,6 +209,7 @@ h3 {
   flex-direction: row;
   flex-wrap: nowrap;
   align-content: stretch;
+  position: relative;
 }
 
 .Container_Music h2{
@@ -331,7 +332,7 @@ td {
   margin-right: 50px;
   margin-left: 2px;
   margin-top: 10px;
-  width: 1000px;
+  width: 373px;
   height: 250px;
 }
 
@@ -346,6 +347,29 @@ td {
   padding-top: 10px;
   padding-left: 5px;
   padding-bottom: 10px;
+}
+
+.Actualidad{ 
+  background-color: #1f2e2d;
+  text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000,
+    1px 1px 0 #000;
+  color: #fa0011;
+  text-align: center;
+  margin-right: 50px;
+  margin-left: 2px;
+  margin-top: 10px;
+  width: 370px;
+  height: 250px;
+}
+
+.Actualidad h2{
+  background-color: orange;
+  font-family: dragonball;
+  font-weight: 400;
+}
+
+.Lista_Actualidad{
+  font-family: dragonball;
 }
 
 /*-----------------------------------------------------------------------------------------------------*/
