--- a/style.css
+++ b/style.css
@@ -359,7 +359,7 @@ td {
   margin-left: 2px;
   margin-top: 10px;
   width: 370px;
-  height: 250px;
+  height: 200px;
 }
 
 .Actualidad h2{
@@ -369,7 +369,21 @@ td {
 }
 
 .Lista_Actualidad{
-  font-family: dragonball;
+  padding-top: 15px;
+  animation-duration: 3s;
+  animation-name: slidein;
+  text-decoration: none;
+}
+
+@keyframes slidein { 
+  from{
+    margin-left: 100%;
+    width: 300%;
+  }
+  to{
+    margin-left: 0%;
+    width: 100%;
+  }
 }
 
 /*-----------------------------------------------------------------------------------------------------*/
