--- a/style.css
+++ b/style.css
@@ -1,271 +1,506 @@
 * {
-    margin: 0;
-    padding: 0;
-    font-family: 'Bebas Neue', sans-serif;
-    font-family: 'Montserrat', sans-serif;
-
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "Bebas Neue", sans-serif;
+  font-family: "Montserrat", sans-serif;
 }
 
+/*Barra de navegacion general*/
 .header {
-    min-height: 100vh;
-    width: 100%;
-    background-image: linear-gradient(rgba(59, 59, 59, 0.048), rgba(0, 1, 7, 0.7)), url(images/banner.jpg);
-    background-position: center;
-    background-size: cover;
-    position: relative;
-}
-
-nav {
-    display: flex;
-    padding: 2% 6%;
-    justify-content: space space-between;
-    align-items: center;
+  width: 100%;
+  display: flex;
+  padding: 2% 6%;
+  justify-content: space space-between;
+  align-items: center;
+  background-color: #550000;
+  max-height: 15vh;
 }
 
 nav img {
-    width: 150 px;
+  width: 150 px;
 }
 
 .nav-links {
-    flex: 1;
-    text-align: right;
+  flex: 1;
+  text-align: right;
 }
 
 .nav-links ul li {
-    list-style: none;
-    display: inline-block;
-    padding: 8px 12px;
-    position: relative;
-
+  list-style: none;
+  display: inline-block;
+  padding: 8px 12px;
+  position: relative;
 }
 
 .nav-links ul li a {
-    color: #fff;
-    text-decoration: none;
-    font-size: 13px;
-
+  color: #fff;
+  text-decoration: none;
+  font-size: 13px;
 }
 
 .nav-links ul li::after {
-    content: '';
-    width: 0%;
-    height: 2px;
-    background: #f44336;
-    display: block;
-    margin: auto;
-    transition: 0.5s;
-
+  content: "";
+  width: 0%;
+  height: 2px;
+  background: #f44336;
+  display: block;
+  margin: auto;
+  transition: 0.5s;
 }
 
 .nav-links ul li:hover::after {
-    width: 100%;
-
+  width: 100%;
 }
 
+/*Index*/
 .text-box {
-    width: 90%;
-    color: #fff;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    text-align: center;
+  width: 90%;
+  color: #fff;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  text-align: center;
 }
 
 .text-box h1 {
-    font-size: 62px;
-
+  font-size: 62px;
 }
 
 .text-box p {
-    margin: 10px 0 40px;
-    font-size: 14px;
-    color: #fff;
-
+  margin: 10px 0 40px;
+  font-size: 14px;
+  color: #fff;
 }
 
 .hero-btn {
-    display: inline-block;
-    text-decoration: none;
-    color: #fff;
-    border: 1px solid #fff;
-    padding: 12px 34px;
-    font-size: 13px;
-    background: transparent;
-    position: relative;
-    cursor: pointer;
-
-
+  display: inline-block;
+  text-decoration: none;
+  color: #fff;
+  border: 1px solid #fff;
+  padding: 12px 34px;
+  font-size: 13px;
+  background: transparent;
+  position: relative;
+  cursor: pointer;
 }
 
 .hero-btn:hover {
-    border: 1px solid #f44336;
-    background: #f44336;
-    transition: 1s;
+  border: 1px solid #f44336;
+  background: #f44336;
+  transition: 1s;
 }
 
 nav .fa {
-    display: none;
+  display: none;
 }
 
-@media(max-width: 700px) {
-    .text-box h1 {
-        font-size: 20px;
+@media (max-width: 700px) {
+  .text-box h1 {
+    font-size: 20px;
+  }
 
-    }
+  .nav-links ul li {
+    display: block;
+  }
 
-    .nav-links ul li {
-        display: block;
-    }
+  /* sidebar */
+  .nav-links {
+    position: absolute;
+    background: #f44336;
+    height: 100vh;
+    width: 200px;
+    top: 0;
+    right: 0;
+    text-align: left;
+    z-index: 2;
+  }
 
-    /* sidebar */
-    .nav-links {
-        position: absolute;
-        background: #f44336;
-        height: 100vh;
-        width: 200px;
-        top: 0;
-        right: 0;
-        text-align: left;
-        z-index: 2;
-    }
+  /* icons hidden sidebar */
+  nav.fa {
+    display: block;
+    color: #fff;
+    margin: 10px;
+    font-size: 22px;
+    cursor: pointer;
+  }
 
-    /* icons hidden sidebar */
-    nav.fa {
-        display: block;
-        color: #fff;
-        margin: 10px;
-        font-size: 22px;
-        cursor: pointer;
-
-
-    }
-
-    .nav-links ul {
-        padding: 30px;
-
-    }
+  .nav-links ul {
+    padding: 30px;
+  }
 }
 
 /*----titulo numero 2 y articulos---*/
 .titulo2 {
-    width: 80%;
-    margin: auto;
-    text-align: center;
-    padding-top: 100px;
+  width: 80%;
+  margin: auto;
+  text-align: center;
+  padding-top: 100px;
 }
 
 h1 {
-    font-size: 36px;
-    font-weight: 600;
+  font-size: 36px;
+  font-weight: 600;
 }
 
 p {
-    color: #000000;
-    font-size: 14px;
-    font-weight: 300;
-    line-height: 24px;
-    padding: 10px;
-
+  color: #000000;
+  font-size: 14px;
+  font-weight: 300;
+  line-height: 24px;
+  padding: 10px;
 }
 
 .row {
-    margin-top: 5%;
-    display: flex;
-    justify-content: space-between;
-}
-
-.row img {
-    max-width: 100%;
+  margin-top: 5%;
+  display: flex;
+  justify-content: space-between;
 }
 
 .titulo2-col {
-    flex-basis: 31%;
-    background: #fff3f3;
-    border-radius: 10px;
-    margin-bottom: 5%;
-    padding: 20px 12px;
-    box-sizing: border-box;
-    transition: 0.5s;
+  flex-basis: 31%;
+  background: #fff3f3;
+  border-radius: 10px;
+  margin-bottom: 5%;
+  padding: 20px 12px;
+  box-sizing: border-box;
+  transition: 0.5s;
 }
 
 h3 {
-    text-align: center;
-    font-weight: 600;
-    margin: 10px 0;
-
+  text-align: center;
+  font-weight: 600;
+  margin: 10px 0;
 }
 
 /*sombras de recuadros articulos*/
 .titulo2-col:hover {
-    box-shadow: 0 0 20px 0px rgba(0, 0, 0, 0.2);
+  box-shadow: 0 0 20px 0px rgba(0, 0, 0, 0.2);
 }
 
 /*visualizacion de reacuadros articulos en pantalla pequeña*/
 @media (max-width: 700px) {
-    .row {
-        flex-direction: column;
-    }
+  .row {
+    flex-direction: column;
+  }
 }
 
 /*ABOUT: acerca de nuestra empresa*/
 .ABOUT {
-    width: 80%;
-    margin: auto;
-    text-align: center;
-    padding-top: 50px;
-  }
-
-ABOUT-col {
-
-    flex-basis: 32%;
-    border-radius: 10px;
-    margin-bottom: 30px;
-    position: relative;
-    overflow: hidden;
-
-}
-
-ABOUT-col img {
-    width: 100%;
-
+  width: 80%;
+  margin: auto;
+  text-align: center;
+  padding-top: 50px;
 }
 
 .location {
-width: 80%;
-margin: auto;
-text-align: center;
-padding-top: 50px;
+  width: 80%;
+  margin: auto;
+  text-align: center;
+  padding-top: 50px;
+}
 
+/*-----------------------------------------------------------------------------------------------------*/
+/*Seccion (2) Op&End - Mariano*/
+
+.Container_general {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  align-content: stretch;
+}
+
+.Container_Music {
+  margin-top: 10px;
+  margin-right: 250px;
+  margin-left: 50px;
+  background-color: #1f2e2d;
+  padding-left: 50px;
+  padding-bottom: 50px;
+  padding-right: 50px;
+}
+
+.Server_Discord {
+  background-color: #1f2e2d;
+  margin-right: 40px;
+  margin-top: 10px;
+  width: 1000px;
+  height: 250px;
+}
+
+.Fondo {
+  background-image: url(images/Site-background-dark_2.JPG);
+  background-position: center;
+  background-attachment: fixed;
+  background-repeat: no-repeat;
+  background-size: cover;
+  color: orange;
+}
+
+body p {
+  color: #fff;
+}
+
+strong {
+  color: grey;
+}
+
+.Sumario_Opening {
+  padding-left: 30px;
+  padding-right: 30px;
+  padding-top: 15px;
+  padding-bottom: 15px;
+  border: 2px solid orange;
+  width: 380px;
+  color: #fff;
+}
+
+.Titulo_Lista {
+  text-align: left;
+}
+
+.Tabla_Opening_Ending,
+tr,
+th,
+td {
+  border-style: solid;
+  border-color: gray;
+  border-collapse: collapse;
+}
+
+.Canciones_Ending {
+  border-top: 7px black solid;
+}
+
+.Sumario_Ending {
+  padding-left: 30px;
+  padding-right: 30px;
+  padding-top: 15px;
+  padding-bottom: 30px;
+  border: 2px solid orange;
+  width: 380px;
+  list-style: none;
+  color: #fff;
+}
+
+.Descripcion_cancion {
+  text-align: left;
+  color: white;
+}
+
+.Titulo_Discord h2 {
+  background-color: orange;
+  color: black;
+  padding-bottom: 50px;
+}
+
+/*-----------------------------------------------------------------------------------------------------*/
+
+/*Seccion (3) Mangas*/
+
+@font-face {
+  font-family: dragonball;
+  src: url(/fuentes/Saiyan-Sans.ttf);
+}
+
+#mangas {
+  /*Body*/
+  background-image: url(/images/dragonball/namek.png);
+  background-size: cover;
+}
+
+/*Titulo Mangas*/
+#mangas section h2 {
+  text-align: center;
+  color: #fa0011;
+  font-size: 4rem;
+  font-family: dragonball;
+  font-weight: 400;
+  text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000,
+    1px 1px 0 #000;
+  margin: 5rem;
+}
+
+#mangas section h2 span {
+  font-family: dragonball;
+  color: #550000;
+}
+
+#mangas section h2 .o {
+  font-family: dragonball;
+  color: #f3e603;
+}
+
+/*Carrusel*/
+#mangas__carrusel {
+  width: 100%;
+}
+
+/*Imagenes*/
+.mangas__caja-lista {
+  position: relative;
+  display: flex;
+  align-items: center;
+  width: fit-content;
+  height: 447px;
+  padding: 10px 0;
+  margin: 0 auto;
+  max-width: 89vw;
+  overflow: hidden;
+}
+
+.mangas__caja-track {
+  position: relative;
+  top: 0;
+  left: 0;
+  display: flex;
+  justify-content: center;
+  transition: 0.5s ease-in-out;
+}
+
+.mangas__caja {
+  position: relative;
+  width: 300px;
+  padding: 0 18px;
+  float: left;
+  display: flex;
+  height: 100%;
+}
+
+.mangas__caja a img {
+  object-fit: cover;
+  height: 447px;
+  width: 100%;
+  border-radius: 0.8rem;
+  box-shadow: 0 2px 5px 0 #0008;
+  transition: 0.3s ease-in-out;
+}
+
+.mangas__caja a img:hover {
+  opacity: 0.85;
+}
+
+/*Botones*/
+.mangas__caja-flecha {
+  border-radius: 30px;
+  background-color: #fff;
+  position: absolute;
+  z-index: 4;
+  width: 48px;
+  height: 48px;
+  text-align: center;
+  box-shadow: 0 2px 5px 0 #0002;
+  border: 0;
+  cursor: pointer;
+}
+
+.mangas__caja-flecha:focus {
+  outline: 0;
+}
+
+.mangas__caja-flecha i {
+  width: 12px;
+  color: #000b;
+}
+
+#mangas__bonton-ant,
+#mangas__bonton-antz {
+  left: 0px;
+}
+
+#mangas__bonton-sig,
+#mangas__bonton-sigz {
+  right: 0px;
+}
+
+/*-----------------------------------------------------------------------------------------------------*/
+
+/*Seccion (5) Formulario - Gonzalo*/
+
+#formulario {
+
+  background-image: url(images/fondoformulario.jpg);
+  background-size:cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-attachment: fixed;
+  
 
 }
 
+#formulario nav {
+  background: none;
+}
 
+form {
+  background: #fcfcfca8;
+  /*-----centrar formulario de contacto-----*/
+  inset: 0;
+  margin: auto;
+  /*-------------------------*/
+  display: flex;
+  flex-direction: column;
+  padding: 2vw 4vw;
+  width: 100%;
+  max-width: 650px;
+  border-radius: 30px;
+  justify-content: center;
+  flex-direction: column;
+}
+
+form h3 {
+  color: #555;
+  font-weight: 800;
+  margin-bottom: 20px;
+}
+
+form input,
+form textarea {
+  border: 0;
+  margin: 10px 0;
+  padding: 10px;
+  outline: none;
+  max-width: 500px;
+  min-width: min-content;
+  max-height: 250px;
+  min-height: 50px;
+  background: #dadada;
+  font-size: 16px;
+  display: flex;
+}
+
+form button {
+  padding: 15px;
+  background: #ff5361;
+  color: #fff;
+  font-size: 18;
+  border: 0;
+  outline: none;
+  cursor: pointer;
+  width: 150px;
+  margin: 20px auto 0;
+  
+}
+
+/*-----------------------------------------------------------------------------------------------------*/
 
 /*-----footer------*/
-
-.footer{
-    width: 100%;
-    text-align: center;
-    padding: 30px 0;
+.footer {
+  width: 100%;
+  text-align: center;
+  padding: 30px 0;
 }
 
-.footer h4{
-margin-bottom: 25px;
-margin-top: 20px;
-font-weight: 600;
-
-
+.footer h4 {
+  margin-bottom: 25px;
+  margin-top: 20px;
+  font-weight: 600;
 }
 
-.icons .fa{
-color:#f44336;
-margin: 0 13px;
-cursor: pointer;
-padding: 18px 0;
-
-
+.icons .fa {
+  color: #f44336;
+  margin: 0 13px;
+  cursor: pointer;
+  padding: 18px 0;
 }
-
-
-
