Correccion de rutas

--- a/style.css
+++ b/style.css
@@ -305,7 +305,7 @@ td {
 
 @font-face {
   font-family: dragonball;
-  src: url(/fuentes/Saiyan-Sans.ttf);
+  src: url(fuentes/Saiyan-Sans.ttf);
 }
 
 #mangas {
