--- a/style.css
+++ b/style.css
@@ -540,7 +540,7 @@ td {
   margin: auto;
   list-style: none;
   height: 3rem;
-  background-color: #aaa6;
+  background-color: #aaaa;
 }
 
 #personajes-ul li {
@@ -563,6 +563,10 @@ td {
   text-align: center;
 }
 
+#menuSelect:hover {
+  cursor: pointer;
+}
+
 #menuSelect option {
   background-color: #aaa6;
   color: #222;
@@ -578,7 +582,7 @@ td {
   border: none;
   background: repeating-linear-gradient(90deg, #ffa500, #ff0000);
   border: 3px solid #fff8;
-  border-radius: .8rem;
+  border-radius: 0.8rem;
 }
 
 /*Imagenes Dragon Ball*/
@@ -606,9 +610,9 @@ td {
 .personajes__cont {
   position: relative;
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+  grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
   gap: 1rem;
-  width: 800px;
+  width: 90vw;
   height: 500px;
   font-family: dragonball;
   transition: all 400ms;
@@ -638,6 +642,7 @@ td {
   transform: translateY(60px);
   opacity: 0;
   transition: all 400ms;
+  text-align: center;
 }
 
 .personajes__cont:hover .personajes__cont-box {
@@ -653,26 +658,6 @@ td {
 .personajes__cont .personajes__cont-box:hover {
   filter: grayscale(0%) opacity(100%);
   cursor: pointer;
-}
-
-.personajes__cont:has(.personajes__cont-box1:hover) {
-  grid-template-columns: 3fr 1fr 1fr 1fr 1fr;
-}
-
-.personajes__cont:has(.personajes__cont-box2:hover) {
-  grid-template-columns: 1fr 3fr 1fr 1fr 1fr;
-}
-
-.personajes__cont:has(.personajes__cont-box3:hover) {
-  grid-template-columns: 1fr 1fr 3fr 1fr 1fr;
-}
-
-.personajes__cont:has(.personajes__cont-box4:hover) {
-  grid-template-columns: 1fr 1fr 1fr 3fr 1fr;
-}
-
-.personajes__cont:has(.personajes__cont-box5:hover) {
-  grid-template-columns: 1fr 1fr 1fr 1fr 3fr;
 }
 
 .personajes__cont-box:nth-child(odd) {
