--- a/style.css
+++ b/style.css
@@ -586,12 +586,36 @@ td {
 }
 
 /*Imagenes Dragon Ball*/
+/*H2*/
 .personajes__imagenes-h2 {
   text-align: center;
   font-weight: 100;
+  margin: 2rem;
 }
 
 .personajes__imagenes-h2 .dragon {
+  font-family: dragonball;
+  color: #ffa500;
+  -webkit-text-stroke: 3px #000;
+  letter-spacing: 6px;
+  font-size: 7rem;
+}
+
+.personajes__imagenes-h2 .ball {
+  font-family: dragonball;
+  color: #ff0000;
+  -webkit-text-stroke: 3px #000;
+  letter-spacing: 6px;
+  font-size: 7rem;
+}
+/*H3*/
+.personajes__imagenes-h3 {
+  text-align: center;
+  font-weight: 100;
+  margin: 2rem;
+}
+
+.personajes__imagenes-h3 .dragon {
   font-family: dragonball;
   color: #ffa500;
   -webkit-text-stroke: 3px #000;
@@ -599,7 +623,7 @@ td {
   font-size: 5rem;
 }
 
-.personajes__imagenes-h2 .ball {
+.personajes__imagenes-h3 .ball {
   font-family: dragonball;
   color: #ff0000;
   -webkit-text-stroke: 3px #000;
@@ -619,6 +643,14 @@ td {
   margin: 5rem auto;
 }
 
+.personajes__contNueve {
+  grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+}
+
+.personajes__contCinco {
+  grid-template-columns: 1.5fr 1.5fr 1.5fr 1.5fr 1.5fr;
+}
+
 .personajes__cont-box {
   position: relative;
   background: var(--img) center center;
@@ -627,6 +659,8 @@ td {
   display: flex;
   justify-content: center;
   align-items: center;
+  border: 1px solid #333;
+  border-radius: .8rem;
 }
 
 .personajes__cont-box::after {
