--- a/style.css
+++ b/style.css
@@ -4,11 +4,6 @@
   box-sizing: border-box;
   font-family: "Bebas Neue", sans-serif;
   font-family: "Montserrat", sans-serif;
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-  font-family: "Bebas Neue", sans-serif;
-  font-family: "Montserrat", sans-serif;
 }
 
 /*Barra de navegacion general*/
@@ -29,12 +24,9 @@
 
 nav img {
   width: 150 px;
-  width: 150 px;
 }
 
 .nav-links {
-  flex: 1;
-  text-align: right;
   flex: 1;
   text-align: right;
 }
@@ -44,16 +36,9 @@ nav img {
   display: inline-block;
   padding: 8px 12px;
   position: relative;
-  list-style: none;
-  display: inline-block;
-  padding: 8px 12px;
-  position: relative;
 }
 
 .nav-links ul li a {
-  color: #fff;
-  text-decoration: none;
-  font-size: 13px;
   color: #fff;
   text-decoration: none;
   font-size: 13px;
@@ -67,21 +52,12 @@ nav img {
   display: block;
   margin: auto;
   transition: 0.5s;
-  content: "";
-  width: 0%;
-  height: 2px;
-  background: #f44336;
-  display: block;
-  margin: auto;
-  transition: 0.5s;
 }
 
 .nav-links ul li:hover::after {
   width: 100%;
-  width: 100%;
 }
 
-/*Index*/
 /*Index*/
 .text-box {
   width: 90%;
@@ -117,21 +93,9 @@ nav img {
   background: transparent;
   position: relative;
   cursor: pointer;
-  display: inline-block;
-  text-decoration: none;
-  color: #fff;
-  border: 1px solid #fff;
-  padding: 12px 34px;
-  font-size: 13px;
-  background: transparent;
-  position: relative;
-  cursor: pointer;
 }
 
 .hero-btn:hover {
-  border: 1px solid #f44336;
-  background: #f44336;
-  transition: 1s;
   border: 1px solid #f44336;
   background: #f44336;
   transition: 1s;
@@ -139,13 +103,6 @@ nav img {
 
 nav .fa {
   display: none;
-  display: none;
-}
-
-@media (max-width: 700px) {
-  .text-box h1 {
-    font-size: 20px;
-  }
 }
 
 @media (max-width: 700px) {
@@ -155,22 +112,6 @@ nav .fa {
 
   .nav-links ul li {
     display: block;
-  }
-
-  .nav-links ul li {
-    display: block;
-  }
-
-  /* sidebar */
-  .nav-links {
-    position: absolute;
-    background: #f44336;
-    height: 100vh;
-    width: 200px;
-    top: 0;
-    right: 0;
-    text-align: left;
-    z-index: 2;
   }
 
   /* sidebar */
@@ -192,19 +133,6 @@ nav .fa {
     margin: 10px;
     font-size: 22px;
     cursor: pointer;
-  }
-
-  /* icons hidden sidebar */
-  nav.fa {
-    display: block;
-    color: #fff;
-    margin: 10px;
-    font-size: 22px;
-    cursor: pointer;
-  }
-
-  .nav-links ul {
-    padding: 30px;
   }
 
   .nav-links ul {
@@ -218,15 +146,9 @@ nav .fa {
   margin: auto;
   text-align: center;
   padding-top: 100px;
-  width: 80%;
-  margin: auto;
-  text-align: center;
-  padding-top: 100px;
 }
 
 h1 {
-  font-size: 36px;
-  font-weight: 600;
   font-size: 36px;
   font-weight: 600;
 }
@@ -237,17 +159,9 @@ p {
   font-weight: 300;
   line-height: 24px;
   padding: 10px;
-  color: #000000;
-  font-size: 14px;
-  font-weight: 300;
-  line-height: 24px;
-  padding: 10px;
 }
 
 .row {
-  margin-top: 5%;
-  display: flex;
-  justify-content: space-between;
   margin-top: 5%;
   display: flex;
   justify-content: space-between;
@@ -261,19 +175,9 @@ p {
   padding: 20px 12px;
   box-sizing: border-box;
   transition: 0.5s;
-  flex-basis: 31%;
-  background: #fff3f3;
-  border-radius: 10px;
-  margin-bottom: 5%;
-  padding: 20px 12px;
-  box-sizing: border-box;
-  transition: 0.5s;
 }
 
 h3 {
-  text-align: center;
-  font-weight: 600;
-  margin: 10px 0;
   text-align: center;
   font-weight: 600;
   margin: 10px 0;
@@ -282,7 +186,6 @@ h3 {
 /*sombras de recuadros articulos*/
 .titulo2-col:hover {
   box-shadow: 0 0 20px 0px rgba(0, 0, 0, 0.2);
-  box-shadow: 0 0 20px 0px rgba(0, 0, 0, 0.2);
 }
 
 /*visualizacion de reacuadros articulos en pantalla pequeña*/
@@ -290,18 +193,10 @@ h3 {
   .row {
     flex-direction: column;
   }
-
-  .row {
-    flex-direction: column;
-  }
 }
 
 /*ABOUT: acerca de nuestra empresa*/
 .ABOUT {
-  width: 80%;
-  margin: auto;
-  text-align: center;
-  padding-top: 50px;
   width: 80%;
   margin: auto;
   text-align: center;
@@ -438,23 +333,25 @@ td {
   font-weight: 400;
   text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000,
     1px 1px 0 #000;
-  margin: 5rem;
+  margin: 5rem auto;
 }
 
 #mangas section h2 span {
+  text-align: center;
   font-family: dragonball;
   color: #550000;
 }
 
 #mangas section h2 .o {
+  text-align: center;
   font-family: dragonball;
   color: #f3e603;
 }
 
 #mangas .dragon,
 #mangas .ball {
-  font-family: dragonball;
   text-align: center;
+  font-family: dragonball;
   font-size: 4rem;
   font-weight: 400;
   margin-bottom: 3rem;
@@ -463,10 +360,12 @@ td {
 }
 
 #mangas .dragon {
+  text-align: center;
   color: #ffa500;
 }
 
 #mangas .ball {
+  text-align: center;
   color: #ff0000;
 }
 
@@ -594,6 +493,22 @@ td {
   background-color: #fa4;
 }
 
+/*Tablet*/
+@media only screen and (min-width: 768px) and (max-width: 1024px) {
+  /*Carrusel*/
+  .mangas__caja {
+    width: 340px;
+  }
+}
+
+/*Celular*/
+@media only screen and (min-width: 480px) and (max-width: 768px) {
+  /*Carrusel*/
+  .mangas__caja {
+    width: 450px;
+  }
+}
+
 /*-----------------------------------------------------------------------------------------------------*/
 
 /*Seccion (4) Personajes - Luis*/
@@ -646,7 +561,7 @@ td {
 #personajes-ul {
   display: flex;
   justify-content: space-evenly;
-  width: 50%;
+  width: 75%;
   margin: auto;
   list-style: none;
   height: 3rem;
@@ -771,10 +686,6 @@ td {
   align-items: center;
   border: 1px solid #333;
   border-radius: 0.8rem;
-  background-position: center top;
-}
-
-.personajes__cont-box {
   background-position: center top;
 }
 
